Solved problems related to order of process instance groups
